--- a/res/layout/manual.xml
+++ b/res/layout/manual.xml
@@ -3,17 +3,17 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:orientation="vertical" >
-
+
     <WebView
         android:id="@+id/webView1"
         android:layout_width="700dp"
         android:layout_height="420dp" />
-
-    <Button
-        android:id="@+id/button1"
-        android:layout_width="140dp"
-        android:layout_height="80dp"
-        android:text="@string/Back"
-        android:textSize="20dp" />
-        
+
+    <ImageButton
+        android:id="@+id/imageButton1"
+        android:layout_width="wrap_content"
+        android:layout_height="73dp"
+        android:onClick="back"
+        android:src="@drawable/backbutton" />
+
 </LinearLayout>
