--- a/res/layout/manual.xml
+++ b/res/layout/manual.xml
@@ -2,7 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:orientation="vertical" >
+    android:orientation="vertical" 
+    android:background="#FFFFFF" >
 
     <WebView
         android:id="@+id/webView1"
@@ -14,6 +15,7 @@
         android:layout_width="wrap_content"
         android:layout_height="73dp"
         android:onClick="back"
+        android:background="@null"
         android:src="@drawable/backbutton" />
 
 </LinearLayout>
