--- a/res/layout/shop.xml
+++ b/res/layout/shop.xml
@@ -25,23 +25,25 @@
             android:layout_weight="0.60" >
         </LinearLayout>
 
+    </LinearLayout>
+    <RelativeLayout android:id="@+id/relativeLayout1" android:layout_width="match_parent" android:layout_height="match_parent">
+        <ImageView android:id="@+id/imageView1" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_alignParentLeft="true" android:layout_alignParentTop="true" android:layout_weight="1.95" android:scaleType="fitXY" android:src="@drawable/pharma"/>
+        <ImageView android:id="@+id/imageView2" android:layout_width="400px" android:layout_height="200px" android:layout_alignParentLeft="true" android:layout_alignParentTop="true" android:layout_marginLeft="27dp" android:layout_marginTop="33dp" android:scaleType="fitXY" android:src="@android:drawable/alert_light_frame"/>
+        <TextView android:id="@+id/textView1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignLeft="@+id/imageView2" android:layout_alignTop="@+id/imageView2" android:layout_marginLeft="34dp" android:layout_marginTop="37dp" android:text="@string/greet" android:textColor="#000000" android:textSize="30px"/>
+        <ListView android:layout_width="300px" android:id="@+id/listView1" android:layout_height="match_parent" android:layout_alignParentRight="true" android:layout_alignParentTop="true" android:background="#44444444" android:drawSelectorOnTop="true"></ListView>
+        <ImageButton android:id="@+id/btn_buy" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignLeft="@+id/imageView2" android:layout_below="@+id/imageView2" android:background="@drawable/buy" android:onClick="click_buy" android:src="@drawable/buy"/>
+
         <ImageButton
             android:id="@+id/btn_sell"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_alignRight="@+id/imageView2"
+            android:layout_alignTop="@+id/btn_buy"
             android:background="@drawable/sell"
             android:onClick="click_sell"
             android:src="@drawable/sell" />
 
-        <ImageButton
-            android:id="@+id/btn_buy"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@drawable/buy"
-            android:onClick="click_buy"
-            android:src="@drawable/buy" />
-
-    </LinearLayout>
+    </RelativeLayout>
 
     <RelativeLayout
         android:id="@+id/relativeLayout1"
@@ -90,6 +92,27 @@
             android:background="#44444444"
             android:drawSelectorOnTop="true" >
         </ListView>
+
+        <ImageButton
+            android:id="@+id/btn_buy"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignLeft="@+id/imageView2"
+            android:layout_below="@+id/imageView2"
+            android:background="@drawable/buy"
+            android:onClick="click_buy"
+            android:src="@drawable/buy" />
+
+        <ImageButton
+            android:id="@+id/btn_sell"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignLeft="@+id/btn_buy"
+            android:layout_below="@+id/btn_buy"
+            android:layout_marginTop="21dp"
+            android:background="@drawable/sell"
+            android:onClick="click_sell"
+            android:src="@drawable/sell" />
 
     </RelativeLayout>
 
