--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -17,16 +17,6 @@
         android:src="@drawable/quit" />
 
     <ImageButton
-        android:id="@+id/ManualButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_toLeftOf="@+id/imageButton3"
-        android:onClick="switch_to_manual"
-        android:background="@null"
-        android:src="@drawable/manual" />
-
-    <ImageButton
         android:id="@+id/StartGameButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -35,13 +25,23 @@
         android:background="@null"
         android:onClick="startGame"
         android:src="@drawable/startbutton" />
-
+
     <ImageView
         android:id="@+id/imageView1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
+        android:layout_centerInParent="true"
         android:src="@drawable/logo" />
+
+    <ImageButton
+        android:id="@+id/ManualButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_marginLeft="24dp"
+        android:background="@null"
+        android:onClick="switch_to_manual"
+        android:src="@drawable/manual" />
 
 </RelativeLayout>
